fixing header spacing

--- a/css/layout.css
+++ b/css/layout.css
@@ -183,6 +183,7 @@ header {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     align-items: baseline;
+    --gap: 5vw;
 }
 #header > :nth-child(2) {
     order: -1;
